Refactored css to fix the project list display and fixed footer spacing

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,19 +1,14 @@
 .App{
-    width: 100%;
-    height:auto;
     display: flex;
     flex-direction: column;
+    min-height: 100vh; /* Full height of the viewport */
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #212329;
-    position:absolute;
     text-align: center;
 }
 
-html{
+html, body{
     background-color: #212329 ;
-}
-
-body{
+    height: 100%;
+    margin:0;
     padding:0;
-    margin: 0;
 }
