--- a/portfolio/src/styles/Project.css
+++ b/portfolio/src/styles/Project.css
@@ -1,14 +1,15 @@
 .projects {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* box-shadow: rgba(252, 227, 4, 0.2) 0px -10px 10px 0px; */
-    color:#f0f0f0;
-    position: relative;
-    margin-bottom:500px;
-  }
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: #f0f0f0;
+  position: relative;
+  flex-grow: 1; /* Allows the .projects section to expand if needed */
+  padding-bottom: 20px; /* Adds space at the bottom without excessive margin */
+  margin-bottom: 0; /* Remove the large margin */
+}
   .projects .projectTitle {
     text-align: center;
     color: #f0f0f0;
@@ -17,11 +18,11 @@
   }
   
   .projectList {
-    width: 70vw;
-    height: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    place-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
+    justify-content: center;
+    padding: 0;
   }
   
   /* MENU ITEM STYLING */
